<package>
  <name>hrpsys_ros_bridge_tutorials</name>
  <version>0.0.0</version>
  <description>hello
  </description>

  <license>EPL</license>
  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>

  <url type="website">http://ros.org/wiki/hrpsys</url>
  <url type="repository">https://code.google.com/p/rtm-ros-robotics</url>
  <url type="bugtracker">https://code.google.com/p/rtm-ros-robotics/issues/list</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>hrpsys_ros_bridge</build_depend>
  <build_depend>hrpsys</build_depend>
  <build_depend>openhrp3</build_depend>
  <build_depend>euscollada</build_depend>

  <run_depend>hrpsys_ros_bridge</run_depend>
  <run_depend>hrpsys</run_depend>
  <run_depend>openhrp3</run_depend>

  <!-- <test_depend>openhrp3</test_depend> -->
  <export>
  </export>
</package>
