<package>
  <name>hrpsys_ros_bridge_tutorials</name>
  <version>0.0.0</version>
  <description>hello
  </description>

  <license>EPL</license>
  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>

  <url type="website">http://ros.org/wiki/hrpsys</url>
  <url type="repository">https://code.google.com/p/rtm-ros-robotics</url>
  <url type="bugtracker">https://code.google.com/p/rtm-ros-robotics/issues/list</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>hrpsys_ros_bridge</build_depend>
  <build_depend>hrpsys</build_depend>
  <build_depend>openhrp3</build_depend>
  <build_depend>euscollada</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>euslisp</build_depend>
  <build_depend>roseus</build_depend>
  <build_depend>pr2eus</build_depend>
  <build_depend>roseus_msgs</build_depend>

  <run_depend>hrpsys_ros_bridge</run_depend>
  <run_depend>hrpsys</run_depend>
  <run_depend>openhrp3</run_depend>
  <run_depend>euscollada</run_depend>
  <run_depend>euslisp</run_depend>
  <run_depend>roseus</run_depend>
  <run_depend>pr2eus</run_depend>
  <run_depend>roseus_msgs</run_depend>

  <!-- <test_depend>openhrp3</test_depend> -->
  <export>
  </export>
</package>
