<package>
  <name>hrpsys_ros_bridge_tutorials</name>
  <version>0.1.6</version>
  <description>tutorial program for hrpsys ros bridge
  </description>

  <license>EPL</license>
  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>

  <url type="website">http://ros.org/wiki/hrpsys</url>
  <url type="repository">https://code.google.com/p/rtm-ros-robotics</url>
  <url type="bugtracker">https://code.google.com/p/rtm-ros-robotics/issues/list</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend version_gte="1.2.12">hrpsys_ros_bridge</build_depend>
  <build_depend>hrpsys</build_depend>
  <build_depend version_gte="3.1.8">openhrp3</build_depend>
  <build_depend>euscollada</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>euslisp</build_depend>
  <build_depend>roseus</build_depend>
  <build_depend>pr2eus</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>multisense_description</build_depend>
  <build_depend>robotiq_description</build_depend>
  <build_depend>jaxon_description</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>hrp2_models</build_depend> <!-- only jsk people have this package, so if you do not find them, please comment out this -->
  <build_depend>jsk_models</build_depend> <!-- only jsk people have this package, so if you do not find them, please comment out this -->
  <build_depend>collada_urdf_jsk_patch</build_depend>
  
  <run_depend>hrpsys_ros_bridge</run_depend>
  <run_depend>hrpsys</run_depend>
  <run_depend>openhrp3</run_depend>
  <run_depend>euscollada</run_depend>
  <run_depend>euslisp</run_depend>
  <run_depend>roseus</run_depend>
  <run_depend>pr2eus</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>hrp2_models</run_depend> <!-- only jsk people have this package, so if you do not find them, please comment out this -->
  <run_depend>jsk_models</run_depend> <!-- only jsk people have this package, so if you do not find them, please comment out this -->
  <!-- <test_depend>openhrp3</test_depend> -->
  <run_depend>collada_urdf_jsk_patch</run_depend>
  <export>
    <pr2eus robot-name="hrp2jsk" interface-file="${prefix}/euslisp/hrp2jsk-interface.l" />
    <pr2eus robot-name="hrp2jsknt" interface-file="${prefix}/euslisp/hrp2jsknt-interface.l" />
    <pr2eus robot-name="hrp2jsknts" interface-file="${prefix}/euslisp/hrp2jsknts-interface.l" />
    <pr2eus robot-name="hrp4r" interface-file="${prefix}/euslisp/hrp4r-interface.l" />
    <pr2eus robot-name="jaxon" interface-file="${prefix}/euslisp/jaxon-interface.l" />
    <pr2eus robot-name="jaxon_red" interface-file="${prefix}/euslisp/jaxon_red-interface.l" />
    <pr2eus robot-name="urataleg" interface-file="${prefix}/euslisp/urataleg-interface.l" />
    <pr2eus robot-name="chidori" interface-file="${prefix}/euslisp/chidori-interface.l" />
    <pr2eus robot-name="ystleg" interface-file="${prefix}/euslisp/ystleg-interface.l" />
  </export>
</package>
